# train_grapher_v3-main

./: .gitignore  CLAUDE.md  README.md  llm_feedback_reward_summary.csv  pyproject.toml
.github/: copilot-instructions.md
PPO_datas/20260415155943/: episode_0001_full.csv  episode_0001_llm_summary.csv  episode_0050_full.csv  episode_0050_llm_summary.csv  episode_0100_full.csv  episode_0100_llm_summary.csv  episode_0150_full.csv  episode_0150_llm_summary.csv  episode_0200_full.csv  episode_0200_llm_summary.csv  episode_0250_full.csv  episode_0250_llm_summary.csv  episode_0300_full.csv  episode_0300_llm_summary.csv  episode_0350_full.csv  episode_0350_llm_summary.csv  episode_0400_full.csv  episode_0400_llm_summary.csv  episode_0450_full.csv  episode_0450_llm_summary.csv  episode_0500_full.csv  episode_0500_llm_summary.csv  episode_0550_full.csv  episode_0550_llm_summary.csv  episode_0600_full.csv  episode_0600_llm_summary.csv  episode_0650_full.csv  episode_0650_llm_summary.csv  episode_0700_full.csv  episode_0700_llm_summary.csv  episode_0750_full.csv  episode_0750_llm_summary.csv  episode_0800_full.csv  episode_0800_llm_summary.csv  episode_0850_full.csv  episode_0850_llm_summary.csv  episode_0900_full.csv  episode_0900_llm_summary.csv  episode_0950_full.csv  episode_0950_llm_summary.csv  (+101 more)
PPO_datas/20260417121956/: episode_0001_full.csv  (+38 more)
agent_documents/: context.md  prd.json  progress.md
config/: database.config.json
document/: SIMULATION_JSON_FORMAT.md
experiments/: README.md
sample/: README.md  README_TIMETABLE_CONTROL.md  timetable_control_example.py
(+1867 files in other folders)
