[project]
name = "train-grapher-v3"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shunichi0402", email = "shunichi_nikoniko@yahoo.co.jp" }
]
dependencies = [
    "openpyxl>=3.1.4",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/train_grapher_v3"]
